# 26-v2-r2-ind-mcu-chassis

./: .gitignore  .gitmodules  26-v2-r2-ind-mcu-chassis.ioc  AGENTS.md  CMakeLists.txt  README.md  STM32F407XX_FLASH.ld  localization_external_source_update.md  report.md  update_modules.sh  wtrproject.toml
.github/workflows/: ai-review.yml
UserCode/: app.cpp  arena.cpp  chassis.cpp  chassis.hpp  connection.cpp  connection.hpp  device.cpp  device.hpp  freertos_heap.c  grip.cpp  grip.hpp  i2c.cpp  i2c.hpp  lift.cpp  lift.hpp  project_parts.hpp  protocol.hpp  system.hpp
UserCode/chassis/: Config.hpp  IndLiftMecanum4.cpp  IndLiftMecanum4.hpp  LiftSide.cpp  LiftSide.hpp  chassis.cpp  chassis.hpp  switch.hpp
UserCode/diagnostics/: KfsStoreActionDiagnostics.cpp  KfsStoreActionDiagnostics.hpp  SpearGrabActionDiagnostics.cpp  SpearGrabActionDiagnostics.hpp  StepActionDiagnostics.cpp  StepActionDiagnostics.hpp
UserCode/grip/: Config.hpp  grip.cpp  (+1 more)
cmake/: wtr_modules.cmake
docs/: AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  INDEX.md  PLANNING.md  README.md  upper_host_command_table.md  upper_host_feedback_table.md
planning/: AGENTS.md  CLAUDE.md  README.md  branch_specs.py  config.hpp  config.py  costmap.py  geometry.py  main.py  plot.py  plot_costmap.py  plot_gif.py  verify.py
planning4/: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  branch_specs.py  config.hpp  config.py  costmap.py  geometry.py  main.py  mecanum.py  plot.py  plot_costmap.py  plot_gif.py  pyproject.toml  verify.py
planning4/src/: main.cpp  trajectory_optimizer.cpp  trajectory_optimizer.hpp
(+46 files in other folders)
